# honeypot

./: .dockerignore  .gitignore  Dockerfile  compose.override.yaml  docker-compose.yaml  main.py  pyproject.toml  runner.py
.github/workflows/: publish-image.yaml
honeypot/: __init__.py  image.py
