[tool.poetry]
name = "honeypot"
version = "0.0.1"
description = "A small webserver that returns the data in which you visited it."
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pillow = "*"
uvloop = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ruff = "*"

[tool.black]
line-length = 125
target-version = ["py311"]

[tool.ruff]
line-length = 125
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]
[tool.ruff.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
venvPath = "."
venv = ".venv/"
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
